// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerHeader #depth at root 1`] = `
<Button
  accessibleLabel={null}
  className="c-explorer__header"
  href="/admin/pages/"
  icon=""
  isLoading={false}
  onClick={[Function]}
  preventDefault={true}
  target={null}
>
  <div
    className="c-explorer__header__inner"
  >
    <Icon
      className={null}
      name="home"
      title={null}
    />
    <span>
      Pages
    </span>
  </div>
</Button>
`;

exports[`ExplorerHeader #page 1`] = `
<Button
  accessibleLabel={null}
  className="c-explorer__header"
  href="/admin/pages/a/"
  icon=""
  isLoading={false}
  onClick={[Function]}
  preventDefault={true}
  target={null}
>
  <div
    className="c-explorer__header__inner"
  >
    <Icon
      className={null}
      name="arrow-left"
      title={null}
    />
    <span>
      test
    </span>
  </div>
</Button>
`;

exports[`ExplorerHeader basic 1`] = `
<Button
  accessibleLabel={null}
  className="c-explorer__header"
  href="/admin/pages/"
  icon=""
  isLoading={false}
  onClick={[Function]}
  preventDefault={true}
  target={null}
>
  <div
    className="c-explorer__header__inner"
  >
    <Icon
      className={null}
      name="arrow-left"
      title={null}
    />
    <span>
      Pages
    </span>
  </div>
</Button>
`;
